using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Constants : MonoBehaviour
{
    public static float PLAYER_SPEED = 10f;

    public const string ANIM_RUN = "Running";
    public const string ANIM_IDLE = "Idle";
    public const string ANIM_DANCE = "Dance";
    public const string ANIM_VICTORY = "Victory";
}
